--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A personal portfolio and blog dedicated to cybersecurity write-ups,
   research, and analysis. Following the latest trends in ethical hacking and defense.
-baseurl: "/portfolio" # the subpath of your site, e.g. /blog
-url: "https://iammo31.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: your-github-username
 linkedin_username: your-linkedin-username
 
@@ -51,3 +51,4 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+
