--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: your-email@example.com
 description: >-
 Ein Portfolio für Cybersecurity-Analysen und Berichte.
 baseurl: ""
-url: "https://dein-github-username.github.io"
+url: "https://iammo31.github.io"
 permalink: /:title/
 plugins:
 
