--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Cybersecurity Portfolio
 email: your-email@example.com
 description: >-
 Ein Portfolio für Cybersecurity-Analysen und Berichte.
-baseurl: ""
+#baseurl: ""
 url: "https://iammo31.github.io"
 permalink: /:title/
 plugins:
