--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Cybersecurity Portfolio
 email: your-email@example.com
-description: >-
-Ein Portfolio für Cybersecurity-Analysen und Berichte.
+description: >- Ein Portfolio für Cybersecurity-Analysen und Berichte.
 #baseurl: ""
 url: "https://iammo31.github.io"
 permalink: /:title/
