--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,15 @@
-# _config.yml
 title: Geronimo Trumpfheller - Cybersecurity Portfolio
 description: "Passionate about defending digital landscapes. I specialize in threat intelligence, malware analysis, and building secure systems."
 author: Geronimo Trumpfheller
 baseurl: ""
 repository: "iammo31/iammo31.github.io"
 
-# Markdown-Prozessor für erweiterte Funktionen wie Tabellen etc.
 markdown: kramdown
 
 kramdown:
-  input: GFM # GitHub Flavored Markdown
-  syntax_highlighter: rouge # Für Code-Blöcke
+  input: GFM
+  syntax_highlighter: rouge
 
-# Plugins, die von GitHub Pages unterstützt werden
 plugins:
   - jekyll-feed
   
